changes html css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   
   <meta charset="UTF-8">
-  <title> Happy birthday Card</title>
+  <title> Happy birthday Nelly</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap">
   <link rel="stylesheet" href="./style.css">
 
